# rabid-robot

./: README.org
rabid-control/: .project-commands  Cargo.toml  build.sh
rabid-control/src/: lib.rs  main.rs  md23.rs  path.rs  twowheel.rs
rabid-remote/: Cargo.toml
rabid-remote/src/: main.rs
scripts/: show-tempo-ramp.py
src/: main.rs
