[package]
name = "rabid-control"
version = "0.1.0"
authors = ["Diez B. Roggisch <deets@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux-embedded-hal = "0.3.0"
i2cdev = "0.4.4"
nalgebra = "0.21"
byteorder = ""
ctrlc = ""
crossbeam-channel = ""
nanomsg = { version = "0.7.2", features = ["bundled"]}
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0"
libm = ""

[dev-dependencies]
approx = ""
